<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="keywords_monsterrom_reborn_settings">MonsterROM-REBORN Settings</string>
    <string name="menu_key_monsterrom_reborn_top_settings">top_level_monsterrom_reborn</string>
    <string name="monsterrom_reborn_allow_downgrade_title">Allow application downgrade</string>
    <string name="monsterrom_reborn_allow_sdkbypass_title">Disable low target SDK block</string>
    <string name="monsterrom_reborn_asks_title">Disable ASKS</string>
    <string name="monsterrom_reborn_boot_sound_title">Play boot sound effect</string>
    <string name="monsterrom_reborn_device_name_title">Device name</string>
    <string name="monsterrom_reborn_dialog_reboot_msg">To apply the changes, a restart is required.</string>
    <string name="monsterrom_reborn_dialog_reboot_negative">Not now</string>
    <string name="monsterrom_reborn_dialog_reboot_positive">Restart</string>
    <string name="monsterrom_reborn_dialog_reboot_title">Restart required</string>
    <string name="monsterrom_reborn_extra_settings_title">Extra settings</string>
    <string name="monsterrom_reborn_games_spoof_title">Unlock higher FPS in games</string>
    <string name="monsterrom_reborn_gphotos_title">Unlimited storage on Google Photos</string>
    <string name="monsterrom_reborn_hma_summary">Prevent apps from detecting other installed apps.</string>
    <string name="monsterrom_reborn_hma_title">Hide installed apps</string>
    <string name="monsterrom_reborn_hide_dev_title">Hide developer status</string>
    <string name="monsterrom_reborn_keybox_clear_title">Delete keybox data</string>
    <string name="monsterrom_reborn_keybox_load_title">Import keybox XML file</string>
    <string name="monsterrom_reborn_keybox_status_checking">Checking validity…</string>
    <string name="monsterrom_reborn_keybox_status_loaded">Keybox loaded</string>
    <string name="monsterrom_reborn_keybox_status_no_data">No keybox data</string>
    <string name="monsterrom_reborn_keybox_status_revoked">Revoked keybox</string>
    <string name="monsterrom_reborn_keybox_status_valid">Valid keybox</string>
    <string name="monsterrom_reborn_keybox_title">Spoof hardware attestation</string>
    <string name="monsterrom_reborn_keybox_toast_cleared">Keybox data cleared.</string>
    <string name="monsterrom_reborn_keybox_toast_error">An error occurred.</string>
    <string name="monsterrom_reborn_keybox_toast_error_xml">Could not parse XML file.</string>
    <string name="monsterrom_reborn_keybox_toast_loaded">Keybox file loaded.</string>
    <string name="monsterrom_reborn_keybox_toast_not_gak">Keybox is not signed by Google.</string>
    <string name="monsterrom_reborn_keybox_toast_not_valid">Keybox file not valid.</string>
    <string name="monsterrom_reborn_launcher_anim_type_title">Launcher animation type</string>
    <string name="monsterrom_reborn_max_refresh_rate_title">Force peak refresh rate</string>
    <string name="monsterrom_reborn_menu_item_reboot_download_title">Reboot to Download</string>
    <string name="monsterrom_reborn_menu_item_reboot_fastboot_title">Reboot to Fastboot</string>
    <string name="monsterrom_reborn_menu_item_reboot_recovery_title">Reboot to Recovery</string>
    <string name="monsterrom_reborn_menu_item_reboot_title">Reboot</string>
    <string name="monsterrom_reborn_menu_reboot_title">Reboot options</string>
    <string name="monsterrom_reborn_native_blur_title">Enable live blur effect</string>
    <string name="monsterrom_reborn_pif_custom_title">Import custom PIF props from file</string>
    <string name="monsterrom_reborn_pif_summary">Spoof your device to pass Google Play attestation.</string>
    <string name="monsterrom_reborn_pif_title">Play Integrity Fix</string>
    <string name="monsterrom_reborn_pif_toast_checking">Checking for updates…</string>
    <string name="monsterrom_reborn_pif_toast_custom">Custom props loaded.</string>
    <string name="monsterrom_reborn_pif_toast_error">An error occurred.</string>
    <string name="monsterrom_reborn_pif_toast_error_custom">Invalid file.</string>
    <string name="monsterrom_reborn_pif_toast_up_to_date">"You're running the latest version."</string>
    <string name="monsterrom_reborn_pif_toast_updated">Update completed successfully.</string>
    <string name="monsterrom_reborn_pif_update_title">Update Play Integrity Fix</string>
    <string name="monsterrom_reborn_rom_version_title">ROM version</string>
    <string name="monsterrom_reborn_secure_ss_title">Allow secure screenshot</string>
    <string name="monsterrom_reborn_settings_title">MonsterROM-REBORN Settings</string>
    <string name="monsterrom_reborn_ss_detection_title">Disable screen capture detection</string>
    <string name="monsterrom_reborn_spoof_settings_title">Spoof settings</string>
    <string name="monsterrom_reborn_ui_settings_title">UI settings</string>
    <string name="monsterrom_reborn_updates_title">MonsterROM-REBORN Updates</string>
    <string name="monsterrom_reborn_vulkan_summary">This is unstable and might cause issues!</string>
    <string name="monsterrom_reborn_vulkan_title">Enable Vulkan renderer</string>
</resources>
