<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/monsterrom_reborn_spoof_settings_title" settings:hierarchicalParentFragment="io.mesalabs.monsterromreborn.settings.MonsterROMRebornSettingsFragment" settings:topLevelPreferenceKey="monsterrom_reborn_spoof_settings"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:settings="http://schemas.android.com/apk/res-auto">
    <SecSwitchPreference android:title="@string/monsterrom_reborn_keybox_title" android:key="unica_keybox" android:summary="@string/summary_placeholder" settings:controller="io.mesalabs.monsterromreborn.settings.keybox.KeyboxPreferenceController" />
    <SecPreference android:title="@string/monsterrom_reborn_keybox_load_title" android:key="unica_keybox_load" />
    <SecPreference android:title="@string/monsterrom_reborn_keybox_clear_title" android:key="unica_keybox_clear" settings:controller="io.mesalabs.monsterromreborn.settings.keybox.KeyboxClearPreferenceController" />
    <com.samsung.android.settings.widget.SecInsetCategoryPreference />
    <SecSwitchPreference android:title="@string/monsterrom_reborn_pif_title" android:key="unica_pif" android:summary="@string/summary_placeholder" settings:controller="io.mesalabs.monsterromreborn.settings.pif.PIFPreferenceController" />
    <SecPreference android:title="@string/monsterrom_reborn_pif_update_title" android:key="unica_pif_update" settings:controller="io.mesalabs.monsterromreborn.settings.pif.PIFUpdatePreferenceController" />
    <SecPreference android:title="@string/monsterrom_reborn_pif_custom_title" android:key="unica_pif_custom" />
    <com.samsung.android.settings.widget.SecInsetCategoryPreference />
    <SecSwitchPreferenceScreen android:title="@string/monsterrom_reborn_hma_title" android:key="unica_hma" android:fragment="io.mesalabs.monsterromreborn.settings.hma.HideMyApplistFragment" settings:controller="io.mesalabs.monsterromreborn.settings.hma.HideMyApplistPreferenceController" />
    <SecSwitchPreferenceScreen android:title="@string/monsterrom_reborn_hide_dev_title" android:key="unica_hide_dev" android:fragment="io.mesalabs.monsterromreborn.settings.spoof.HideDeveloperStatusFragment" settings:controller="io.mesalabs.monsterromreborn.settings.spoof.HideDeveloperStatusPreferenceController" />
</PreferenceScreen>
