<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/monsterrom_reborn_extra_settings_title" settings:hierarchicalParentFragment="io.mesalabs.monsterromreborn.settings.MonsterROMRebornSettingsFragment" settings:topLevelPreferenceKey="monsterrom_reborn_extra_settings"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:settings="http://schemas.android.com/apk/res-auto">
    <SecSwitchPreference android:title="@string/monsterrom_reborn_allow_downgrade_title" android:key="unica_allow_downgrade" settings:controller="io.mesalabs.monsterromreborn.settings.pm.AppDowngradePreferenceController" />
    <SecSwitchPreference android:title="@string/monsterrom_reborn_allow_sdkbypass_title" android:key="unica_allow_sdkbypass" settings:controller="io.mesalabs.monsterromreborn.settings.pm.AppTargetSDKBypassPreferenceController" />
    <SecSwitchPreference android:title="@string/monsterrom_reborn_asks_title" android:key="unica_asks" settings:controller="io.mesalabs.monsterromreborn.settings.pm.ASKSPreferenceController" />
    <com.samsung.android.settings.widget.SecInsetCategoryPreference />
    <SecSwitchPreference android:title="@string/monsterrom_reborn_secure_ss_title" android:key="unica_secure_ss" settings:controller="io.mesalabs.monsterromreborn.settings.wm.SecureScreenshotPreferenceController" />
    <SecSwitchPreference android:title="@string/monsterrom_reborn_ss_detection_title" android:key="unica_ss_detection" settings:controller="io.mesalabs.monsterromreborn.settings.wm.CaptureDetectionPreferenceController" />
    <com.samsung.android.settings.widget.SecInsetCategoryPreference />
    <SecSwitchPreference android:title="@string/monsterrom_reborn_gphotos_title" android:key="unica_gphotos" settings:controller="io.mesalabs.monsterromreborn.settings.extra.GooglePhotosPreferenceController" />
    <SecSwitchPreference android:title="@string/monsterrom_reborn_games_spoof_title" android:key="unica_games_spoof" settings:controller="io.mesalabs.monsterromreborn.settings.extra.GamesPropsPreferenceController" />
</PreferenceScreen>
