<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/monsterrom_reborn_ui_settings_title" settings:hierarchicalParentFragment="io.mesalabs.monsterromreborn.settings.MonsterROMRebornSettingsFragment" settings:topLevelPreferenceKey="monsterrom_reborn_ui_settings"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:settings="http://schemas.android.com/apk/res-auto">
    <SecSwitchPreference android:title="@string/monsterrom_reborn_native_blur_title" android:key="unica_native_blur" settings:controller="io.mesalabs.monsterromreborn.settings.ui.LiveBlurPreferenceController" />
    <SecDropDownPreference android:title="@string/monsterrom_reborn_launcher_anim_type_title" android:key="unica_launcher_anim_type" android:summary="%s" settings:controller="io.mesalabs.monsterromreborn.settings.ui.LauncherAnimationTypePreferenceController" />
    <com.samsung.android.settings.widget.SecInsetCategoryPreference />
    <SecSwitchPreference android:title="@string/monsterrom_reborn_vulkan_title" android:key="unica_vulkan" android:summary="@string/monsterrom_reborn_vulkan_summary" settings:controller="io.mesalabs.monsterromreborn.settings.ui.VulkanPreferenceController" />
    <com.samsung.android.settings.widget.SecInsetCategoryPreference />
    <SecSwitchPreference android:title="@string/monsterrom_reborn_max_refresh_rate_title" android:key="unica_max_refresh_rate" settings:controller="io.mesalabs.monsterromreborn.settings.ui.ForceMaxRefreshRatePreferenceController" />
    <com.samsung.android.settings.widget.SecInsetCategoryPreference />
    <SecSwitchPreference android:title="@string/monsterrom_reborn_boot_sound_title" android:key="unica_boot_sound" settings:controller="io.mesalabs.monsterromreborn.settings.ui.BootSoundPreferenceController" />
</PreferenceScreen>
