<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/monsterrom_reborn_settings_title" settings:hierarchicalParentFragment="com.android.settings.homepage.TopLevelSettings" settings:keywords="@string/keywords_monsterrom_reborn_settings" settings:topLevelPreferenceKey="top_level_monsterrom_reborn"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:settings="http://schemas.android.com/apk/res-auto">
    <com.android.settingslib.widget.LayoutPreference android:layout="@layout/monsterrom_reborn_settings_logo_layout" android:selectable="false" android:key="monsterrom_reborn_logo" />
    <com.samsung.android.settings.widget.SecInsetCategoryPreference />
    <Preference android:title="@string/monsterrom_reborn_rom_version_title" android:key="monsterrom_reborn_rom_version" android:summary="@string/summary_placeholder" settings:controller="io.mesalabs.monsterromreborn.settings.ROMVersionPreferenceController" />
    <Preference android:title="@string/monsterrom_reborn_device_name_title" android:key="unica_device_name" android:summary="@string/summary_placeholder" settings:controller="io.mesalabs.monsterromreborn.settings.DeviceNamePreferenceController" />
    <com.samsung.android.settings.widget.SecInsetCategoryPreference />
    <io.mesalabs.monsterromreborn.settings.preference.IconPreference android:icon="@drawable/ic_monsterrom_reborn_settings_ui" android:title="@string/monsterrom_reborn_ui_settings_title" android:key="monsterrom_reborn_ui_settings" android:fragment="io.mesalabs.monsterromreborn.settings.ui.UISettingsFragment" settings:controller="io.mesalabs.monsterromreborn.settings.ui.UISettingsPreferenceController" />
    <com.samsung.android.settings.widget.SecInsetCategoryPreference />
    <io.mesalabs.monsterromreborn.settings.preference.IconPreference android:icon="@drawable/ic_monsterrom_reborn_settings_spoof" android:title="@string/monsterrom_reborn_spoof_settings_title" android:key="monsterrom_reborn_spoof_settings" android:fragment="io.mesalabs.monsterromreborn.settings.spoof.SpoofSettingsFragment" settings:controller="io.mesalabs.monsterromreborn.settings.spoof.SpoofSettingsPreferenceController" />
    <io.mesalabs.monsterromreborn.settings.preference.IconPreference android:icon="@drawable/ic_monsterrom_reborn_settings_extra" android:title="@string/monsterrom_reborn_extra_settings_title" android:key="monsterrom_reborn_extra_settings" android:fragment="io.mesalabs.monsterromreborn.settings.extra.ExtraSettingsFragment" settings:controller="io.mesalabs.monsterromreborn.settings.extra.ExtraSettingsPreferenceController" />
</PreferenceScreen>
